[package]
name = "yetanotherbar"
version = "0.1.0"
authors = ["Poly <bartek.marynczak@op.pl>"]
edition = "2018"

[dependencies]
gio = "0.9.0"
gtk = "0.9.0"
gdk = "0.13.0"

relm = "0.20.0"
relm-derive = "0.20.0"

serde = "1.0"
serde_derive = "1.0"
toml = "0.5.6"


chrono = "*"
i3ipc = "0.10.1"
alsa = "0.4.2"
mpris = "1.1.2"
systemstat = "0.1.5"

