[package]
name = "yetanotherbar"
version = "0.1.0"
authors = ["Poly <bartek.marynczak@op.pl>"]
edition = "2018"

[dependencies]
gio = "0.14"
gtk = "0.14"
gdk = "0.14"
glib = "0.14"

relm = "0.22"
relm-derive = "0.22"

serde = "1.0"
serde_derive = "1.0"
ron = "0.6.0"

chrono = "0.4"
i3ipc = "0.10.1"
alsa = "0.5.0"
mpris = "1.1.2"
systemstat = "0.1.5"


# reqwest = {version="0.11.0",features=["blocking"]}
gdk-pixbuf = "0.14.0"
lazy_static = "1.4.0"
glib = "0.14.0"
form_urlencoded = "1.0.1"
url = "2.2.2"
