[package]
name = "yetanotherbar"
version = "0.1.0"
authors = ["Poly <marynczak.bartlomiej@gmail.com>"]
edition = "2018"

[dependencies]
gio = "0.14"
gtk = { version="0.14", features=["v3_22"] }
gdk = "0.14"
glib = "0.14"

relm = "0.22"
relm-derive = "0.22"

serde = "1.0"
serde_derive = "1.0"
ron = "0.6.0"

chrono = "0.4"
i3ipc = "0.10.1"
alsa = "0.5.0"
mpris = "1.1.2"
systemstat = "0.1.5"
gtk-layer-shell = { version="0.2.2", features=["v0_5"], optional=true}

[features]
default=[]
wayland=["gtk-layer-shell"]